syntax = "proto3";

package table_session;

service TableSessionService {
  rpc CreateTableSession(TableIdRequest) returns (TableSessionResponse);
  rpc GetTableSession(SessionIdRequest) returns (TableSessionResponse);
  rpc DeactivateTableSession(SessionIdRequest) returns (TableSessionResponse);
}

message TableSession {
  string id = 1;
  string table_id = 2;
  bool is_active = 3;
}

message TableIdRequest {
  string table_id = 1;
}

message SessionIdRequest {
  string session_id = 1;
}

message TableSessionResponse {
  TableSession table_session = 1;
}
